--- a/scripts/Brewfile
+++ b/scripts/Brewfile
@@ -1,11 +1,14 @@
 tap "nikitabobko/tap"
+brew "fastfetch"
 brew "git"
+brew "lazygit"
 brew "neovim"
 brew "stow"
 brew "tmux"
 cask "aerospace"
 cask "cursor"
 cask "docker-desktop"
+cask "font-jetbrains-mono-nerd-font"
 cask "ghostty"
 cask "karabiner-elements"
 cask "obsidian"
