--- a/scripts/Brewfile
+++ b/scripts/Brewfile
@@ -5,6 +5,7 @@ brew "lazygit"
 brew "neovim"
 brew "stow"
 brew "tmux"
+brew "tree"
 cask "aerospace"
 cask "cursor"
 cask "docker-desktop"
@@ -12,4 +13,5 @@ cask "font-jetbrains-mono-nerd-font"
 cask "ghostty"
 cask "karabiner-elements"
 cask "obsidian"
+cask "transmission"
 cask "zen"
