small tweaks / updated brewfile

--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -1,6 +1,6 @@
 # ~~~~~~~~~~~~~~~ LOGIN & STARTUP ~~~~~~~~~~~~~~~
 
-start-at-login = true
+start-at-login = false
 after-login-command = []
 after-startup-command = []
 
