--- a/scripts/Brewfile
+++ b/scripts/Brewfile
@@ -15,3 +15,9 @@ cask "karabiner-elements"
 cask "obsidian"
 cask "transmission"
 cask "zen"
+cask "localsend"
+cask "obs"
+cask "steam"
+cask "wine-stable"
+cask "zed"
+cask "ibkr"
